Каталог готов на проверку

--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,30 @@
 body {
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 	width: 1200px;
-	
+
 	font-family: "PT Sans", Arial, Helvetica, sans-serif;
 	font-style: normal;
 	font-size: 14px;
-	font-weight: 700;
+	font-weight: 400;
 	line-height: 26px;
-	color: #000000;
+	color: #333333;
 	text-transform: uppercase;
 	background-color: #ffffff;
-	
+	box-shadow: 0 0 60px -5px rgba(0,0,0,.2);
+
 }
 html {
 	min-width: 1200px;
 	background-color: #f2f2f2;
-	
+	padding: 0 40px;
+
 }
 a {
 	text-decoration: none;
 }
-*{outline: 1px solid rgba(248, 247, 244, .8)}
+
+
 .visually-hidden {
 	position: absolute;
 	overflow: hidden;
@@ -45,17 +48,16 @@ a {
 
 .main-header {
 	width: 1200px;
-	min-height: 100px;
-	margin-bottom: 20px;
 }
 .main-nav {
 	width: 1200px;
 	min-height: 50px;
+  position: relative;
 }
 .main-nav-logo-wrapper {
 	position: absolute;
 	left: 50%;
-	transform: translateX(-165%);
+	transform: translateX(-50%);
 }
 .site-nav {
 	width:1200px;
@@ -65,8 +67,13 @@ a {
 .site-nav a {
 	color: #000000;
 	text-align: center;
-	display: block;
 }
+
+.site-nav li:nth-child(3),
+.site-nav li:nth-child(4) {
+  text-align: right;
+}
+
 .site-nav a:hover {
 	color: rgba(129,179,210, .8);
 }
@@ -82,10 +89,9 @@ a {
 	flex-direction: row;
 	padding: 20px 0;
 	margin: 0;
-	margin-bottom: 10px;
 	padding-left: 6%;
 	padding-right: 6%;
-	box-sizing: border-box; 
+	box-sizing: border-box;
 }
 .site-nav li {
 	width: 20%;
@@ -117,140 +123,179 @@ a {
 .intro-title {
 	text-align: center;
 }
+
+.intro-title img {
+  margin-top: 78px;
+}
+
 .advantages {
 	width: 1200px;
 	margin: 0;
 	padding: 0;
-	min-height: 1200px;
 }
 .advantages-title {
-	color: #000000;
 	font-size: 21px;
+	font-weight: 700;
 	text-align: center;
 }
 .advantages-subtitle  {
-	color: #333333;
-	font-weight: 400;
 	text-align: center;
 }
 .advantages-list {
 	margin: 0;
 	padding: 0;
-	width: 1200px;
-	min-height: 500px;
 	margin-left: auto;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-between;
+	counter-reset: list-count;
 }
-.advantages-list li:not(:nth-child(1),:nth-child(2)) {
-	width: 33%;
-	min-height: 100px;
+
+.more-advantages-wrapper {
+	width: 100%;
 }
-.advantages-photo-city {
-	width: 1200px;
+
+.advantages-item:not(.advantages-significant):not(.more-advantages-wrapper) {
+	width: 33.33333333333333%;
+	text-align: center;
+	padding: 45px 45px 66px 45px;
+	box-sizing: border-box;
+}
+
+.advantages-item .advantages-item-heading:after {
+	display: block;
+	margin-top: 10px;
+	line-height: 20px;
+	counter-increment: list-count;
+	content: "– №" counter(list-count) " –";
+	font-size: 14px;
+	font-weight: 400;
+}
+
+.more-advantages .advantages-item-heading:after {
+	content: none;
+}
+
+.advantages-significant {
+	width: 100%;
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-start;
-	
-	height: 255px;
+	min-height: 256px;
 	margin-left: 0;
+	overflow: hidden;
 }
-.city-desc {
-	width: 400px;
-	height: 255px;
-	text-align: center;
+
+.significant-revers .significant-image {
+	order: 1;
+} 
+
+.significant-revers .significant-point {
+	order: 2;
 }
-.advantages-photo-diabolo {
-	width: 1200px;
+
+.advantages-list .advantages-item:nth-child(1) {
+	order: 1;
+}
+
+.advantages-list .advantages-item:nth-child(6) {
+	order: 2;
+}
+
+.advantages-list .advantages-item:nth-child(2) {
+	order: 3;
+}
+
+.advantages-list .advantages-item:nth-child(3) {
+	order: 4;
+}
+
+.advantages-list .advantages-item:nth-child(4) {
+	order: 5;
+}
+
+.advantages-list .advantages-item:nth-child(5) {
+	order: 6;
+}
+
+.input-wrapper {
 	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	height: 255px;
-	margin-left: 0;
+	width: 114px;
 }
-.diabolo-desc {
-	width: 300px;
-	height: 255px;
+
+.input-wrapper input {
+	order: 2;
 	text-align: center;
 }
-.advantages-desc {
-	width: 1200px;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	min-height: 330px;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
+
+.input-wrapper button:last-of-type {
+	order: 3;
 }
-.advantages-desc-item {
-	width: 33%;
-	height: 250px;
+
+
+.significant-image {
+	width: 66.66666666666667%;
+	position: relative;
+}
+
+.significant-image img {
+	position: absolute;
+	left: 0;
+}
+
+.significant-point {
+	width: 33.33333333333333%;
 	text-align: center;
-	vertical-align: middle;
+	padding: 53px 65px;
+	box-sizing: border-box;
 }
+
 .more-advantages {
-	width: 1200px;
 	margin: 0;
 	padding: 0;
-	min-height: 330px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	}
-.more-advantages-item {
-	width: 33%;
-	height: 330px;
-	text-align: center;
-	vertical-align: bottom;
 }
-.advantages-desc-item h3,
-.more-advantages-item h3 {
-	font-size: 21px;
-	font-weight: 700;
-	line-height: 21px;
-	color: #000000;
-}
-.advantages-desc-item p,
-.more-advantages-item p {
+
+.significant-point,
+.advantages-item {
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 21px;
-	color: #333333;
 }
-.advantages-list .city-desc {
+
+.significant-point {
 	color: #ffffff;
+}
+
+.advantages-significant {
 	background-color: #81b3d2;
 }
-.advantages-list .city-desc h3 {
+.advantages-item-heading {
 	font-size: 21px;
 	font-weight: 700;
 	line-height: 21px;
 }
-.advantages-list .city-desc p {
-	font-size: 14px;
-	font-weight: 400;
-	line-height: 21px;
-}
+
 .request {
-	width: 1200px;
-	min-height: 450px;
 	text-align: center;
-	}
-.request-offer {
-	width: 1200px;
-	min-height: 100px;
-	padding-bottom: 100px;
 }
-.request-form {
-	width: 570px;
-	height: 400px;
-	margin-left: 315px;
+
+.request-map {
 	position: relative;
-	z-index: 2;
-	top: -530px;
-	
+	min-height: 447px;
+	overflow: hidden;
 }
+
+.request-map .map-image {
+	position: absolute;
+	left: 0;
+}
+
+.request-item input::placeholder {
+	color: #000000;
+}
+
 .request-offer h2 {
 	color: #000000;
 	font-size: 30px;
@@ -268,6 +313,10 @@ a {
 	font-size: 21px;
 	font-weight: 700;
 	line-height: 26px;
+	padding: 30px 140px;
+	display: inline-block;
+	margin-right: auto;
+	margin-left: auto;
 	background-color: #766357;
 }
 .request-hotel-button:hover,
@@ -279,14 +328,38 @@ a {
 	background-color: #503e33;
 }
 .request-form {
+	position: absolute;
+	width: 460px;
+	left: 0;
+	top: 0;
+	right: 0;
+	margin: auto;
+	padding: 55px;
 	background-color: #ffffff;
+	box-shadow: 0 11px 35px 0 rgba(0,0,0,.2);
 }
+
+.request-items-container {
+	display: flex;
+}
+
+.request-items-container .request-item{
+	width: 50%;
+}
+
+.request-item {
+	display: flex;
+	align-items: center;
+	text-align: left;
+}
+
 .request-item label {
 	color: #000000;
 	font-size: 14px;
 	font-weight: 700;
 	line-height: 21px;
 	text-transform: uppercase;
+	flex-grow: 1;
 }
 
 .request-item input {
@@ -297,7 +370,36 @@ a {
 	color:#000000;
 	background-color: #f2f2f2;
 	border: 2px solid #f2f2f2;
+	width: 100%;
+	padding: 6.5px 6.5px;
+	box-sizing: border-box;
 }
+
+.request-form .request-wrapper {
+	position: relative;
+}
+
+.request-item button {
+	width: 38px;
+	height: 38px;
+}
+
+.request-wrapper input {
+	width: 347px;
+	margin-left: 5px;
+}
+
+.request-wrapper button {
+	
+	position: absolute;
+	right: 0;
+}
+
+.request-wrapper label {
+	flex-grow: 1;
+}
+
+
 .request-item input:hover {
 	background-color: #ebebeb;
 	border: 2px solid #ebebeb;
@@ -308,7 +410,7 @@ a {
 }
 .request-item button {
 	color: rgba(0,0,0, .3);
-	background-color: #ffffff;
+	background-color: #f2f2f2;
 	border: none;
 }
 .request-item button:hover {
@@ -359,10 +461,9 @@ a {
 /*------INNER PAGE ----*/
 
 .inner-page {
-	font-family: "PT Sans", Arial,Helvetica,sans-serif;
 	margin: 0;
 	padding: 0;
-	
+
 }
 .container {
 	margin: 0;
@@ -370,6 +471,7 @@ a {
 }
 .main-nav {
 	background-color: #ffffff;
+	font-weight: 700;
 }
 .site-nav .site-nav-current  {
 	color:#766357;
@@ -389,10 +491,23 @@ a {
 	flex-direction: row;
 	justify-content: space-around;
 }
+.user-choice fieldset {
+	border: none;
+	margin-top: 20px;
+}
+.user-choice fieldset:not(:nth-child(3)) {
+	margin-left: 60px;
+}
 .user-choice legend {
 	font-size: 16px;
 	line-height: 21px;
 	color: #ffffff;
+	margin-bottom: 25px;
+
+}
+.user-choice ul {
+	padding: 0;
+	margin: 0;
 }
 .user-choice label {
 	font-size: 14px;
@@ -401,36 +516,129 @@ a {
 	color: #ffffff;
 }
 .filters-infrastructure {
-	width: 400px;
+	width: 325px;
 	min-height: 200px;
+	
 }
+.filters-option label {
+	display: block;
+	position: relative;
+	left: 20px;
+}
+.filters-input-checkbox + label::before {
+	content: "";
+	position: absolute;
+	left: -42px;
+	top: 0;
+	width: 16px;
+	height: 16px;
+	border: 2px solid #ffffff;
+}
+.filters-option {
+	margin-bottom: 25px;
+	display: flex;
+}
+
 .filters-input[disabled] + label {
 	color: #a1b4a9;
 }
 .filters-accomodation {
-	width: 400px;
+	width: 325px;
 	min-height: 200px;
 }
 .filters-price {
-	width: 400px;
-	min-height: 200px;
+	width: 330px;
+	color: #ffffff;
+	text-transform: uppercase;
 }
-.filters-price-request {
-	font-weight: 400;
+.price-section-title {
+	margin-bottom: 9px;
+	font-size: 16px;
+	font-weight: 700;
 	line-height: 21px;
 }
+.filters-price-request {
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 21px;
+	position: relative;
+	height: 36px;
+	margin-bottom: 20px;
+	border: 2px solid #ffffff;
+	border-radius: 2px;
+}
+.filters-price-request label {
+	display: inline-block;
+	vertical-align: top;
+	cursor: pointer;
+/*	background-color: transparent;
+	border: 2px solid white;*/
+}
+.filters-price-min,
+.filters-price-max {
+	width: 90px;
+	padding-left: 65px;
+}
 .filters-price-request input {
-	color: #ffffff;
-	background-color: transparent;
-	border: 2px solid white;
+	width: 50px;
+	margin: 0;
+	color: inherit;
+	font: inherit;
+	background: none;
+	border: none;
+}
+.filters-price-request::after {
+	content: "";
+	position: absolute;
+	width: 2px;
+	height: 22px;
+	background: #ffffff;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+.price-controls {
+	position: relative;
+	margin-bottom: 32px;
+}
+.price-controls .scale {
+	height: 2px;
+	background: rgba(255, 255, 255, .3);
+}
+.price-controls .bar {
+	width: 80%;
+	height: 2px;
+	background: #ffffff;
+}
+.range-toggle {
+	position: absolute;
+	top: -9px;
+	width: 4px;
+	height: 4px;
+	background: #ababab;
+	border: 8px solid #ffffff;
+	border-radius: 50%;
+	box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+	cursor: pointer;
+}
+.range-toggle-min {
+	left: 0;
+}
+.range-toggle-max {
+	left: 80%;
 }
 .hotel-variant-button {
+	display: block;
+	margin: 0 auto;
+	padding: 6px 35px;
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 21px;
 	color: #ffffff;
 	background-color: transparent;
 	border: 2px solid #ffffff;
+	border-radius: 2px;
+	cursor: pointer;
 }
 .hotel-variant-button:hover,
 .hotel-variant-button:focus {
@@ -446,6 +654,7 @@ a {
 	font-size: 21px;
 	font-weight: 700;
 	line-height: 26px;
+	margin-top: 7px;
 }
 
 .catalog-item-type,
@@ -523,6 +732,7 @@ a {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	
 }
 .sorting-main {
 	width: 400px;
@@ -553,6 +763,7 @@ a {
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 18px;
+	margin-left: 30px;
 	color: rgba(0,0,0, .8);
 	border-bottom: 1px dotted #000000;
 }
@@ -580,7 +791,9 @@ a {
 	width: 1200px;
 	min-height: 200px;
 	display: flex;
-	flex-direction: row;
+	
+}.catalog-item p {
+	margin: 30px 30px 0 60px;
 }
 .catalog-item-info {
 	width: 900px;
@@ -590,39 +803,61 @@ a {
 	width: 900px;
 	min-height: 50px;
 	display: flex;
-	flex-direction: row;
+	justify-content: space-between;
+}
+.info-hotel-name p {
+	border: none;
+}
+.info-hotel-name h2 {
+	margin-top: 30px;
+	margin-bottom: 0;
 }
 .info-hotel-price {
 	width: 900px;
-	min-height: 50px;
+	min-height: 30px;
 	display: flex;
-	flex-direction: row;
+	margin: 0;
+	padding: 0;
+}
+.info-hotel-price p:first-child {
+	margin: 5px 0;
+}
+.info-hotel-price p:nth-child(2) {
+	margin: 5px 0 5px 20px;
 }
 .info-hotel-order {
 	width: 900px;
-	min-height: 50px;
+	min-height: 30px;
 	display: flex;
-	flex-direction: row;
+	margin: 0;
+	padding: 0;
+}
+.catalog-button-info,
+.catalog-button-order {
+	width: 120px;
+	height: 25px;
+	text-align: center;
+	padding-top: 5px;
+}
+.catalog-button-order {
+	margin-left: 10px;
+}
+.info-hotel-order p {
+	margin: 5px 0 0 500px;;
 }
 /* -----Footer----*/
 
 .footer-main {
-	width: 1200px;
-	margin-top: 50px;
-}
-.footer-container {
-	width: 1200px;
-	height: 120px;
-	font-size: 0;
+	padding: 36px 0;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
 	box-sizing: border-box;
+	align-items: center;
 }
-.footer-column {
 
+.footer-column {
 	width: 33%;
-	height: 120px;
 	text-align: center;
 	vertical-align: top;
 	margin: 0;
@@ -633,11 +868,27 @@ a {
 	font-size: 21px;
 	line-height: 26px;
 	color: #000000;
-	padding: 45px 50px 0 60px;
 }
 
 
-.social-button span {
+.social-button {
+	width: 46px;
+	height: 46px;
+	background-color: #81b3d2;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.footer-list {
+	display: flex;
+	width: 150px;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	padding: 0;
+	margin: 0 auto;
+}
+
+/* .social-button span {
 	color: #ffffff;
 	background-color: #81b3d2;
 }
@@ -646,18 +897,21 @@ a {
 }
 .social-button span:active {
 	background-color: #5496bd;
-}
+} */
 .footer-copyright {
-
 	padding-left: 20px;
-	height: 120px;
 }
 .footer-copyright span {
 	font-weight: 400;
-	line-height: 26px;
+	line-height: 36px;
+	font-size: 14px;
 	color: #000000;
+	margin-right: 10px;
 }
 .footer-copyright-logo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	color: #000000;
 }
 .footer-copyright-logo:hover {
@@ -667,17 +921,3 @@ a {
 .footer-copyright-logo:active {
 	color: rgba(0,0,0, .8);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
