--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ a {
 
 .significant-revers .significant-image {
 	order: 1;
-} 
+}
 
 .significant-revers .significant-point {
 	order: 2;
@@ -205,6 +205,7 @@ a {
 }
 
 .input-wrapper {
+  margin-left: 5px;
 	display: flex;
 	width: 114px;
 }
@@ -322,6 +323,7 @@ a {
 	background-color: #503e33;
 }
 .request-form {
+  visibility: hidden;
 	position: absolute;
 	width: 460px;
 	left: 0;
@@ -351,7 +353,7 @@ a {
 }
 
 .request-item label {
-	
+
 	color: #000000;
 	font-size: 14px;
 	font-weight: 700;
@@ -374,7 +376,12 @@ a {
 }
 
 .request-form .request-wrapper {
+  margin-bottom: 28px;
 	position: relative;
+}
+
+.request-items-container {
+  margin-bottom: 28px;
 }
 
 .request-item button {
@@ -388,7 +395,7 @@ a {
 }
 
 .request-wrapper button {
-	
+
 	position: absolute;
 	right: 0;
 }
@@ -457,7 +464,7 @@ a {
 	color: rgba(255,255,255, .3);
 }
 @keyframes good {
-	0% { transform: translateY(3000px);}
+	0% { transform: translateY(100px);}
 	70% { transform: translateY(-30px);}
 	90% { transform: translateY(10px);}
 	100% { transform: translateY(0);}
@@ -468,17 +475,17 @@ a {
 	20%, 40%, 60%, 80% { transform: translateX(10px);}
 }
 .request-form-show {
-	display: block;
+	visibility: visible;
 	animation: good 0.6s;
 }
 .request-form-error {
 	animation: shake 0.6s;
 }
-.request-form-close {
+/*.request-form-close {
 	position: absolute;
 	top: 0;
 	right: 280px;
-	
+
 	width: 22px;
 	height: 22px;
 	font-size: 0;
@@ -499,9 +506,11 @@ a {
 	transform: rotate(45deg);
 }
 .request-form-close::after {
-	transform: rotate(-45deg);
+	transform: rotate(-45deg);*/
 }
 /*------INNER PAGE ----*/
+
+
 
 
 .container {
@@ -558,9 +567,9 @@ a {
 	color: #ffffff;
 }
 .filters-infrastructure {
-	
+
 	min-height: 200px;
-	
+
 }
 .filters-option label {
 	display: block;
@@ -585,7 +594,7 @@ a {
 	color: #a1b4a9;
 }
 .filters-accomodation {
-	
+
 	min-height: 200px;
 }
 .filters-price {
@@ -703,7 +712,7 @@ a {
 	margin: 10px 0 10px 60px;
 	justify-content: space-between;
 	vertical-align: middle;
-	
+
 	box-sizing: border-box;
 }
 .sorting-main {
@@ -711,7 +720,7 @@ a {
 	/*margin-left: 100px;*/
 	padding: 10px 50px;
 	display: flex;
-	
+
 	justify-content: flex-start;
 }
 .sorting-active {
@@ -783,6 +792,7 @@ a {
 	color: rgba(0,0,0, .5);
 }
 .catalog-button-info {
+  display: inline-block;
 	font-size: 14px;
 	line-height: 21px;
 	color: #ffffff;
@@ -824,31 +834,37 @@ a {
 
 }
 .catalog-item {
-	width: 1200px;
+  padding: 30px 60px;
+  justify-content: space-between;
 	display: flex;
 }
-.catalog-item p {
-/*	margin: 30px 30px 0 60px;*/
-	padding: 30px 30px 0 60px;
+.catalog-item .catalog-item-rating {
 	box-sizing: border-box;
+  margin: 0;
+  align-self: flex-end;
 }
 .catalog-item-info {
 	width: 900px;
 
 }
 
+.catalog-item-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
 .info-hotel-name {
-	width: 900px;
-	min-height: 50px;
+  justify-content: space-between;
 	display: flex;
-	justify-content: space-between;
 }
 .info-hotel-name p {
+  margin: 0;
 	border: none;
+  display: flex;
+  align-items: center;
 }
 .info-hotel-name h2 {
-	margin-top: 30px;
-	margin-bottom: 0;
+	margin: 0;
 }
 .info-hotel-price {
 	width: 900px;
@@ -857,12 +873,12 @@ a {
 	margin: 0;
 	padding: 0;
 }
-.info-hotel-price p:first-child {
+/*.info-hotel-price p:first-child {
 	margin: 5px 0;
 }
 .info-hotel-price p:nth-child(2) {
 	margin: 5px 0 5px 20px;
-}
+}*/
 .info-hotel-order {
 	width: 900px;
 	min-height: 30px;
@@ -872,18 +888,14 @@ a {
 }
 .catalog-button-info,
 .catalog-button-order {
-	width: 120px;
-	height: 25px;
+  padding: 3px 17px;
 	text-align: center;
-	padding-top: 5px;
+
 }
 .catalog-button-order {
-	margin-left: 10px;
+  display: inline-block;
 }
-.info-hotel-order p {
-	margin: 5px 0 0 550px;;
-}
-/* -----Footer----*/
+
 
 .footer-main {
 	padding: 36px 0;
@@ -893,6 +905,15 @@ a {
 	box-sizing: border-box;
 	align-items: center;
 }
+
+.footer-index {
+  position: absolute;
+  width: 100%;
+  background-color: #ffffff;
+  opacity: 0.9;
+  bottom: 0;
+}
+
 
 .footer-column {
 	width: 33%;
